# silius

./: .dockerignore  .env.example  .gitignore  .gitmodules  CNAME  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  LICENSE-MIT  Makefile  P2P.md  README.md  book.toml  build.rs  docker-compose.yml  rustfmt.toml  tomlfmt.toml
.cargo/: config.toml
.github/scripts/: install_geth.sh  install_solc.sh
.github/workflows/: CI.yml  book.yml  bundle_spec_test.yml  ci.yml  docker.yml  publish_image.yml
book/: SUMMARY.md  intro.md
book/installation/: installation.md  source.md
book/theme/: head.hbs
bundler-spec-test/: .env  docker-compose.yml  launcher.sh
bundler-spec-test/geth-dev/: Dockerfile
bundler-spec-tests/: docker-compose.yml  launcher.sh
bundler-spec-tests/funder/: Dockerfile  funder.sh
bundler-spec-tests/geth-dev/: Dockerfile
bundler-spec-tests/p2p/: node-enr  node-key
crates/bundler/: .env.example  Cargo.toml  README.md
crates/bundler/src/: bundler.rs  conditional.rs  errors.rs  ethereum.rs  fastlane.rs  flashbots.rs  lib.rs  mock_relay.rs  test_helper.rs
crates/bundler/tests/: bundler.rs  common.rs
crates/contracts/: Cargo.toml  README.md  build.rs
crates/contracts/src/: entry_point.rs  error.rs  executor_tracer.rs  gen.rs  lib.rs  simulation_codes.rs  tracer.rs  utils.rs
crates/grpc/: Cargo.toml  README.md  build.rs
crates/grpc/src/: builder.rs  bundler.rs  error.rs  errors.rs  lib.rs  network.rs  proto.rs  uopool.rs  utils.rs
crates/grpc/src/protos/bundler/: bundler.proto
crates/grpc/src/protos/types/: types.proto
crates/grpc/src/protos/uopool/: uopool.proto
crates/mempool/: Cargo.toml  README.md
crates/mempool/src/: builder.rs  error.rs  estimate.rs  lib.rs  mempool.rs  reputation.rs  uopool.rs  utils.rs
crates/mempool/src/database/: env.rs  mempool.rs  mod.rs  reputation.rs  tables.rs  utils.rs
crates/mempool/src/memory/: mempool.rs  reputation.rs
crates/mempool/src/validate/: mod.rs  utils.rs  validator.rs
crates/mempool/src/validate/sanity/: call_gas.rs  entities.rs  max_fee.rs  mod.rs  paymaster.rs  sender.rs  unstaked_entities.rs  verification_gas.rs
crates/mempool/src/validate/simulation/: mod.rs  signature.rs  timestamp.rs  verification_extra_gas.rs
crates/mempool/src/validate/simulation_trace/: call_stack.rs  code_hashes.rs  external_contracts.rs  gas.rs  mod.rs  opcodes.rs  storage_access.rs
crates/metrics/: Cargo.toml  README.md
crates/metrics/src/: ethers.rs  grpc.rs  label.rs  lib.rs  mempool.rs  rpc.rs
crates/p2p/: Cargo.toml  README.md
crates/p2p/src/: behaviour.rs  config.rs  discovery.rs  enr.rs  gossipsub.rs  lib.rs  listen_addr.rs  network.rs
crates/p2p/src/discovery/: enr.rs  enr_ext.rs  mod.rs
crates/p2p/src/peer_manager/: mod.rs  network_behaviour.rs  peerdb.rs
crates/p2p/src/peer_manager/peer/: peer_info.rs
crates/p2p/src/request_response/: behaviour.rs  handler.rs  inbound.rs  mod.rs  models.rs  outbound.rs  protocol.rs  upgrade.rs
crates/p2p/src/rpc/: handler.rs  methods.rs  mod.rs  outbound.rs  protocol.rs
crates/p2p/src/rpc/codec/: mod.rs  ssz_snappy.rs
crates/p2p/src/service/: behaviour.rs  mod.rs  utils.rs
crates/p2p/src/tests/: enr.rs  mod.rs  pubsub.rs  req_rep.rs
crates/p2p/src/types/: globals.rs  mod.rs  pubsub.rs  topics.rs
crates/p2p/tests/: common.rs  enr.rs  pubsub.rs  rpc.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: bundler.rs  chain.rs  constants.rs  consts.rs  entrypoint.rs  error_codes.rs  lib.rs  mempool.rs  p2p.rs  provider.rs  reputation.rs  sanity.rs  sanity_check.rs  simulation.rs  uopool.rs  user_operation.rs  utils.rs  wallet.rs
crates/primitives/src/user_operation/: hash.rs  mod.rs  request.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: codes.rs  debug.rs  debug_api.rs  error.rs  eth.rs  eth_api.rs  lib.rs  middleware.rs  rpc.rs  web3.rs  web3_api.rs
crates/rpc/tests/: common.rs  rpc.rs
crates/uopool/: Cargo.toml  README.md
crates/uopool/src/: builder.rs  lib.rs  mempool.rs  reputation.rs  uopool.rs  utils.rs
crates/uopool/src/canonical/: mod.rs  sanity_check.rs  simulation.rs
crates/uopool/src/database/: env.rs  mempool.rs  mod.rs  reputation.rs  tables.rs  utils.rs
crates/uopool/src/memory/: mempool.rs  mod.rs  reputation.rs
crates/uopool/src/validate/: mod.rs  utils.rs  validator.rs
crates/uopool/src/validate/sanity/: call_gas.rs  entities.rs  max_fee.rs  mod.rs  paymaster.rs  sender.rs  sender_uos.rs  unstaked_entities.rs  verification_gas.rs
crates/uopool/src/validate/simulation/: mod.rs  signature.rs  timestamp.rs
crates/uopool/src/validate/simulation_trace/: call_stack.rs  code_hashes.rs  external_contracts.rs  gas.rs  mod.rs  opcodes.rs  storage_access.rs
docs/: P2P.md
docs/architecture/: aa-bundler-rust.drawio  silius.drawio
examples/: Cargo.toml  README.md  swap_user_operation.rs  user_operation.rs
examples/direct/: Cargo.toml  main.rs
examples/simple-account/: Cargo.toml
examples/simple-account/examples/: create.rs  deposit.rs  transfer.rs
examples/simple-account/src/: lib.rs
examples/simple_account/: create.rs  create_with_factory.rs  deposit.rs  simple_account_create.rs  transfer.rs
examples/storage/: Cargo.toml
examples/storage/examples/: database.rs  memory.rs
examples/user-operation/: Cargo.toml
examples/user-operation/examples/: user_operation.rs
scripts/: run_examples.sh
src/: lib.rs  util.rs  utils.rs
src/bundler/: bundler.proto  bundler.rs  mod.rs  server.rs  service.rs
src/chain/: gas.rs
src/contracts/: entrypoint.rs  gen.rs  mod.rs  tracer.rs
src/models/: chainspec.rs  mod.rs  wallet.rs
src/res/: mod.rs
src/rpc/: debug.rs  debug_api.rs  eth.rs  eth_api.rs  mod.rs
src/types/: mod.rs  reputation.rs  sanity_check.rs  simulation.rs  user_operation.rs  utils.rs
tests/: Cargo.toml  README.md  tracer_tests.rs  validate_tests.rs
tests/common/: gen.rs  mod.rs
tests/src/: estimate_gas_tests.rs  lib.rs  simulation_tests.rs  tracer_tests.rs  validate_tests.rs
tests/src/common/: gen.rs  mod.rs
(+22 files in other folders)
