[workspace]
members = [
    "bin/silius",
    "crates/bundler",
    "crates/contracts",
    "crates/grpc",
    "crates/primitives",
    "crates/rpc",
    "crates/uopool",
    "examples",
    "tests",
]
default-members = ["bin/silius"]

[workspace.package]
authors = ["Vid Kersic <vid.kersic@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vid201/silius"
rust-version = "1.71.1"

[workspace.dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "fa3017715a298728d9fb341933818a5d0d84c2dc" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "fa3017715a298728d9fb341933818a5d0d84c2dc" }
tracing = "0.1"
tokio = { version = "1.18", features = ["full"] }

[profile.debug-fast]
inherits = "release"
debug = true

[patch]
[patch.crates-io]
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "3d8ca6641d2e72448c23f4596f769c8fd1c784d1" }
