[workspace]
members = [
    "bin/silius",
    "crates/bundler",
    "crates/contracts",
    "crates/grpc",
    "crates/primitives",
    "crates/rpc",
    "crates/uopool",
    "examples/*",
    "tests",
]
default-members = ["bin/silius"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
authors = ["Vid Kersic <vid.kersic@yahoo.com>"]
version = "0.3.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silius-rs/silius"
rust-version = "1.73.0"

[workspace.dependencies]
async-stream = "0.3.5"
async-trait = "0.1"
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "fa3017715a298728d9fb341933818a5d0d84c2dc", features = [
    "ws",
] }
expanded-pathbuf = "0.1"
eyre = "0.6.8"
futures-util = "0.3.28"
parking_lot = "0.12"
serde_json = "1"
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1"

[profile.debug-fast]
inherits = "release"
debug = true

[patch]
[patch.crates-io]
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "3d8ca6641d2e72448c23f4596f769c8fd1c784d1" }
[patch."https://github.com/gakonst/ethers-rs"]
ethers = { git = "https://github.com/Vid201/ethers-rs", branch = "chore/ws" }
