[package]
name = "silius-examples"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
description = """
AA (ERC-4337) bundler examples
"""

[dev-dependencies]

anyhow = "1"
ethers = { workspace = true }
silius-primitives = { path = "../crates/primitives" }
tokio = { workspace = true }

[[example]]
name = "user-operation"
path = "user_operation.rs"


