[package]
name = "silius-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = """
AA (ERC-4337) bundler integration tests
"""

[dependencies]
alloy-chains = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
parking_lot = { workspace = true }
silius-contracts = { path = "../crates/contracts" }
silius-primitives = { path = "../crates/primitives" }
silius-uopool = { path = "../crates/uopool" }
tempdir = "0.3.7"
tokio = { workspace = true }

[dev-dependencies]
futures = "0.3.28"

[package.metadata.cargo-udeps.ignore]
normal = ["alloy-chains", "silius-contracts", "silius-primitives", "silius-uopool"]
