[package]
name = "silius-contracts"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = """
AA (ERC-4337) bundler smart contract interfaces
"""

[dependencies]

anyhow = { workspace = true }
ethers = { workspace = true }
lazy_static = "1.4.0"
serde = "1"
serde_json = "1"
silius-primitives = { path = "../primitives" }
thiserror = "1"

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
ethers = { workspace = true, features = ["solc-full"] }
ethers-solc = "2.0.8"
