[package]
name = "silius-contracts"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = """
AA (ERC-4337) bundler smart contract interfaces
"""

[dependencies]

ethers = { workspace = true }
eyre = { workspace = true }
lazy_static = { workspace = true }
regex = "1.9.6"
serde = "1"
serde_json = "1"
silius-primitives = { path = "../primitives" }
thiserror = "1"

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
ethers = { workspace = true, features = ["solc-full"] }
ethers-solc = "2.0.8"
eyre = { workspace = true }
