[package]
name = "silius-grpc"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = """
AA (ERC-4337) bundler gRPC interfaces
"""

[dependencies]
anyhow = { workspace = true }
arrayref = "0.3"
async-trait = { workspace = true }
dashmap = "5.4.0"
ethers = { workspace = true }
expanded-pathbuf = { workspace = true }
parking_lot = { workspace = true }
prost = "0.11"
serde_json = { workspace = true }
silius-bundler = { path = "../bundler" }
silius-contracts = { path = "../contracts" }
silius-primitives = { path = "../primitives" }
silius-uopool = { path = "../uopool" }
tokio = { workspace = true }
tonic = { version = "0.8", default-features = false, features = [
    "codegen",
    "prost",
    "transport",
] }
tracing = { workspace = true }

[build-dependencies]
prost-build = "0.11"
protobuf-src = "1.1.0"
tonic-build = "0.8"
