[package]
name = "silius-grpc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = """
AA (ERC-4337) bundler gRPC interfaces
"""

[dependencies]
arrayref = "0.3"
async-trait = { workspace = true }
dashmap = "5.4.0"
discv5 = { workspace = true }
ethers = { workspace = true }
expanded-pathbuf = { workspace = true }
eyre = { workspace = true }
futures = "0.3.28"
libp2p-identity = "0.2.3"
parking_lot = { workspace = true }
prost = "0.11"
serde_json = { workspace = true }
silius-bundler = { path = "../bundler" }
silius-contracts = { path = "../contracts" }
silius-p2p = { path = "../p2p" }
silius-primitives = { path = "../primitives" }
silius-uopool = { path = "../uopool" }
tokio = { workspace = true }
tonic = { version = "0.8", default-features = false, features = [
    "codegen",
    "prost",
    "transport",
] }
tracing = { workspace = true }

[build-dependencies]
prost-build = "0.11"
protobuf-src = "1.1.0"
tonic-build = "0.8"
