[package]
name = "silius-mempool"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Account abstractiono (ERC-4337) mempool implementation"
homepage = "https://github.com/silius-rs/silius/tree/main/crates/mempool"

[dependencies]
# workspace dependencies
silius-contracts = { workspace = true }
silius-primitives = { workspace = true }

# eth
alloy-chains = { workspace = true }
ethers = { workspace = true }

# reth
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "aa6f2cb0610fb4fa0926b42cfed7f8ff51e0db8a", optional = true }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth.git", rev = "aa6f2cb0610fb4fa0926b42cfed7f8ff51e0db8a", optional = true }

# async
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
parking_lot = { workspace = true }

# tokio
tokio = { workspace = true }

# misc
bin-layout = "7.1.0"
const-hex = "1.10.0"
dyn-clone = "1.0.17"
enumset = "1.1.3"
eyre = { workspace = true }
page_size = "0.6.0"
prost = "0.12.3"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# workspace dependencies
silius-primitives = { workspace = true, features = ["test-utils"] }

# misc
tempfile = { workspace = true }

[features]
mdbx = ["dep:reth-db", "dep:reth-libmdbx"]
