[package]
name = "silius-primitives"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = """
AA (ERC-4337) bundler commonly used types
"""

[dependencies]
anyhow = { workspace = true }
educe = { version = "0.4", features = ["Debug", "Default"] }
ethers = { workspace = true }
expanded-pathbuf = { workspace = true }
lazy_static = "1.4.0"
rustc-hex = "^2.0.1"
serde = "1"
serde_json = { workspace = true }
ssz_rs = "0.8.0"
ssz_rs_derive = "0.8.0"
strum = "0.24"
strum_macros = "0.24"
tokio = { workspace = true }
tracing = { workspace = true }

[features]
test-utils = []
