[package]
name = "silius-primitives"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = """
AA (ERC-4337) bundler commonly used types
"""

[dependencies]
alloy-chains = { workspace = true }
async-stream = { workspace = true }
educe = { version = "0.4", features = ["Debug", "Default"] }
ethers = { workspace = true }
expanded-pathbuf = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
lazy_static = { workspace = true }
rustc-hex = "^2.0.1"
serde = "1"
serde-hex = "0.1.0"
serde_json = { workspace = true }
ssz_rs = { workspace = true }
ssz_rs_derive = { workspace = true }
strum = "0.24"
strum_macros = "0.24"
tokio = { workspace = true }
tracing = { workspace = true }

[features]
test-utils = []
