[package]
name = "silius-rpc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Account abstraction (ERC-4337) RPC implementation"
homepage = "https://github.com/silius-rs/silius/tree/main/crates/rpc"

[dependencies]
# workspace dependencies
silius-grpc = { workspace = true }
silius-primitives = { workspace = true }

# eth
ethers = { workspace = true }

# rpc
hyper = { version = "0.14" }
hyper-tls = { version = "0.5.0" }
jsonrpsee = { version = "0.18.2", features = ["server", "macros", "client"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.1", features = ["cors"] }

# grpc
tonic = { version = "0.8", default-features = false, features = ["transport"] }

# async
async-trait = { workspace = true }

# misc
eyre = { workspace = true }
git-version = "0.3.5"
serde = "1"
serde_json = { workspace = true }

[dev-dependencies]
# tokio
tokio = { workspace = true, features = ["full"] }
