[package]
name = "silius-rpc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Account abstraction (ERC-4337) RPC implementation"
homepage = "https://github.com/silius-rs/silius/tree/main/crates/rpc"

[dependencies]
# workspace dependencies
silius-grpc = { workspace = true }
silius-mempool = { workspace = true }
silius-metrics = { workspace = true }
silius-primitives = { workspace = true }

# eth
ethers = { workspace = true }

# rpc
hyper = { version = "0.14.20" }
hyper-tls = { version = "0.5.0", features = ["vendored"] }
jsonrpsee = { workspace = true }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = ["cors"] }

# grpc
tonic = { version = "0.10.2", default-features = false, features = ["transport"] }

# async
async-trait = { workspace = true }
pin-project = "1.1.3"

# misc
eyre = { workspace = true }
git-version = "0.3.9"
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# tokio
tokio = { workspace = true, features = ["full"] }
