[package]
name = "silius-uopool"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = """
AA (ERC-4337) bundler uopool implementation
"""

[dependencies]

anyhow = "1"
async-trait = "0.1"
educe = { version = "0.4", features = ["Debug", "Default"] }
enumset = "1.1.2"
ethers = { workspace = true }
page_size = "0.5.0"
prost = "0.11"
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "aa6f2cb0610fb4fa0926b42cfed7f8ff51e0db8a" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth.git", rev = "aa6f2cb0610fb4fa0926b42cfed7f8ff51e0db8a" }
serde = "1"
serde_json = "1"
silius-contracts = { path = "../contracts" }
silius-primitives = { path = "../primitives" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
silius-primitives = { path = "../primitives", features = ["test-utils"] }
tempdir = "0.3.7"
